# cpp_chat_application

./: CMakeLists.txt  README.md
src/: chatboxtextedit.cpp  chatboxtextedit.h  client.cpp  client.h  client_main.cpp  main.cpp  mainwindow.ui  server.cpp  server.h
